#858: Fixed scrollbar in Google Chrome

--- a/style/Fire.css
+++ b/style/Fire.css
@@ -963,8 +963,7 @@ MAIN POSTS
 }
 
 .pun .codebox pre {
-	overflow-y:hidden;
-	overflow: auto;
+	overflow: hidden;
 	width: 100%;
 	direction: ltr;
 	text-align: left;
